test-mokkery-compiler/src/test/data/diagnostic/matchers/declarations/MatcherMustNotBeFinal.kt
import dev.mokkery.matcher.MokkeryMatcherScope

<!MATCHER_MUST_NOT_BE_EXTERNAL!>external fun <T> MokkeryMatcherScope.matcher(): T<!>
